# py3c

./: .gitignore  .travis.yml  LICENSE.MIT  LICENSE.PSF  Makefile  README.rst  cheatsheet.rst  guide.rst  py3c.pc.in  setup.cfg  setup.py  tox.ini
.github/workflows/: main.yml
doc/: Makefile
doc/source/: capsulethunk.rst  changelog.rst  cheatsheet.rst  conf.py  contributing.rst  defs.rst  ext-types.rst  fileshim.rst  guide-cleanup.rst  guide-modernization.rst  guide-porting.rst  guide.rst  index.rst  reference.rst  special-guides.rst
include/: py3c.h
include/py3c/: capsulethunk.h  comparison.h  compat.h  fileshim.h
test/: __main__.py  all_py3c_headers.h  setup.py  test_empty.c  test_empty.cpp  test_py3c.c  test_py3c.cpp
