[metadata]
name=py3c
version=1.4
description=Python compatibility headers
long_description=file: README.rst
author=Petr Viktorin
author_email=encukou@gmail.com
url=https://github.com/encukou/py3c
project_urls = 
    Documentation = https://py3c.readthedocs.io/en/latest/
    Issue Tracker = https://github.com/encukou/py3c/issues
platforms=any


[bdist_wheel]
universal=1
